--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,5 +1,5 @@
 % \documentclass[draft]{book}
-\documentclass[draft]{book}
+\documentclass[]{book}
 
 \usepackage{graphicx}
 
@@ -209,6 +209,9 @@
 
 % Added 10-21-15 ----------------------------------------
 \usepackage{pdflscape}
+
+% Added 10-22-15 ----------------------------------------
+\usepackage{seqsplit}
 
 %******************************************************************************************************
 %******************************************************************************************************
