--- a/Results.tex
+++ b/Results.tex
@@ -35,7 +35,7 @@ Water samples are collected for each site in dark Nalgene bottles (see Appendix~
 \begin{table}[htb]
   \caption{Summary of 2013, 2014 and 2015 data collections. Three images were used for testing the retrieval (green filling).}
   \centering
-  \includegraphics[width=12cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/Collect131415.png}
+  \includegraphics[width=13cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/Collect131415.png}
   \label{tab:collect}
 \end{table}
 
@@ -77,7 +77,7 @@ Water samples are collected for each site in dark Nalgene bottles (see Appendix~
         \put (95,45) {(b)}
       \end{overpic}
     \end{minipage} 
-      \caption{Area of study from the Landsat 8 images acquired on (a) 09-29-2014 (scene LC80170302014272LGN00) and (b) 09-16-2015 (scene LC80170302015259LGN00). \label{fig:ROI_L8Images1415} }
+      \caption[Area of study from the Landsat 8 images acquired on (a) 09-29-2014 and (b) 09-16-2015.]{Area of study from the Landsat 8 images acquired on (a) 09-29-2014 (scene LC80170302014272LGN00) and (b) 09-16-2015 (scene LC80170302015259LGN00). \label{fig:ROI_L8Images1415} }
 \end{figure}  
 
 % ------------------------------
@@ -102,7 +102,7 @@ After collection, these water samples were analyzed in the lab at the Rochester 
     \includegraphics[width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/astar_SM_LONGS091913-eps-converted-to.pdf}
       \centerline{(c)}\medskip
     \end{minipage}
-  \caption{Mass-specific absorption spectra for chlorophyll, CDOM and minerals from the 09-19-13 collection. These measured IOPs were used to create the LUT in HydroLight. \label{fig:IOPastLONGS} }  
+  \caption[Mass-specific absorption spectra for chlorophyll, CDOM and minerals from the 09-19-13 collection.]{Mass-specific absorption spectra for chlorophyll, CDOM and minerals from the 09-19-13 collection. These measured IOPs were used to create the LUT in HydroLight. \label{fig:IOPastLONGS} }  
   % \caption{CDOM mass-specific absorption spectra used to create the LUT in HydroLight. \label{fig:CDOMaastLONGS} } 
   % \caption{SM mass-specific absorption spectra used to create the LUT in HydroLight. \label{fig:SMaastLONGS} } 
 \end{figure}
@@ -128,7 +128,7 @@ The \gls{mobelm}\index{atmospheric correction!MoB-ELM} atmospheric correction al
     % \vspace{1.5cm}
     \centerline{(b)}\medskip
   \end{minipage}
-  \caption{Example of the bright and dark pixel used in the MoB-ELM atmospheric correction method for Landsat 8 scene acquired on 09-19-2013. The radiance spectra are obtained from pseudo invariant features for the bright pixel and from a region in the lake with low level of concentrations. The remote-sensing reflectance ($R_{rs}$) spectra for the bright pixels are obtained from the Provisional Landsat 8 Surface Reflectance product from USGS over a bright object in the scene. The $R_{rs}$ spectra of the dark pixel are obtained from the Hydrolight simulating a region in the lake with low level of concentrations.\label{fig:MOBELMpxls} } 
+  \caption[Example of the bright and dark pixel used in the MoB-ELM atmospheric correction method for Landsat 8 scene acquired on 09-19-2013.]{Example of the bright and dark pixel used in the MoB-ELM atmospheric correction method for Landsat 8 scene acquired on 09-19-2013. The radiance spectra are obtained from pseudo invariant features for the bright pixel and from a region in the lake with low level of concentrations. The remote-sensing reflectance ($R_{rs}$) spectra for the bright pixels are obtained from the Provisional Landsat 8 Surface Reflectance product from USGS over a bright object in the scene. The $R_{rs}$ spectra of the dark pixel are obtained from the Hydrolight simulating a region in the lake with low level of concentrations.\label{fig:MOBELMpxls} } 
 \end{figure}
 
 \begin{figure}[htbp!]
@@ -157,7 +157,7 @@ Results of the MoB-ELM atmospheric correction method for different water bodies 
 \end{figure}
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 \subsection{Comparison with Gordon and Wang approach}
-The results from the MoB-ELM algorithm were compared with three different products: 1) the \cite{Gordon:1994} approach implemented in the \gls{seadas} tool and 2) the \gls{acolite} tool, and 3) the \cite{Ruddick:2000bs} approach implemented in \gls{seadas}.
+The results from the MoB-ELM algorithm were compared with three different products based on \cite{Gordon:1994}: 1) the \cite{Gordon:1994} approach implemented in the \gls{seadas} tool and 2) the \cite{Gordon:1994} approach implemented in the \gls{acolite} tool, and 3) the \cite{Ruddick:2000bs} approach implemented in \gls{seadas}. The following section explains how this algorithm were applied to the Landsat 8 imagery.
 % -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.
 \subsubsection{SeaDAS-SWIR}
 \label{subsec:seadasswir}
@@ -484,7 +484,7 @@ We calculated the normalized \acrfull{nrmse} for $R_{rs}(\lambda)$ to evaluate t
   \end{minipage}    
 
 % 
-  \caption{Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 443 nm, derived from the 09-29-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) using the different methods. Colors denote pixel densities, the dashed black line is the 1:1 line, and the Reduced Major Axis (RMA) regression line is drawn in red. \label{fig:13262Rrs443} } 
+  \caption[Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 443 nm, derived from the 09-29-2013 image.]{Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 443 nm, derived from the 09-29-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) using the different methods. Colors denote pixel densities, the dashed black line is the 1:1 line, and the Reduced Major Axis (RMA) regression line is drawn in red. \label{fig:13262Rrs443} } 
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -538,7 +538,7 @@ We calculated the normalized \acrfull{nrmse} for $R_{rs}(\lambda)$ to evaluate t
   \end{minipage}    
 
 % 
-  \caption{Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 483 nm, derived from the 09-29-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) using the the different methods. Colors denote pixel densities, the dashed black line is the 1:1 line, and the Reduced Major Axis (RMA) regression line is drawn in red. \label{fig:13262Rrs483} } 
+  \caption[Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 483 nm, derived from the 09-29-2013 image.]{Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 483 nm, derived from the 09-29-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) using the the different methods. Colors denote pixel densities, the dashed black line is the 1:1 line, and the Reduced Major Axis (RMA) regression line is drawn in red. \label{fig:13262Rrs483} } 
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -592,7 +592,7 @@ We calculated the normalized \acrfull{nrmse} for $R_{rs}(\lambda)$ to evaluate t
   \end{minipage}    
 
 % 
-  \caption{Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 561 nm, derived from the 09-29-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) using the the different methods. Colors denote pixel densities, the dashed black line is the 1:1 line, and the Reduced Major Axis (RMA) regression line is drawn in red. \label{fig:13262Rrs561} } 
+  \caption[Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 561 nm, derived from the 09-29-2013 image.]{Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 561 nm, derived from the 09-29-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) using the the different methods. Colors denote pixel densities, the dashed black line is the 1:1 line, and the Reduced Major Axis (RMA) regression line is drawn in red. \label{fig:13262Rrs561} } 
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -646,7 +646,7 @@ We calculated the normalized \acrfull{nrmse} for $R_{rs}(\lambda)$ to evaluate t
   \end{minipage}    
 
 % 
-  \caption{Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 655 nm, derived from the 09-29-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) using the the different methods. Colors denote pixel densities, the dashed black line is the 1:1 line, and the Reduced Major Axis (RMA) regression line is drawn in red. \label{fig:13262Rrs655} } 
+  \caption[Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 655 nm, derived from the 09-29-2013 image.]{Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 655 nm, derived from the 09-29-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) using the the different methods. Colors denote pixel densities, the dashed black line is the 1:1 line, and the Reduced Major Axis (RMA) regression line is drawn in red. \label{fig:13262Rrs655} } 
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -654,7 +654,7 @@ We calculated the normalized \acrfull{nrmse} for $R_{rs}(\lambda)$ to evaluate t
 % \begin{figure}[htb]
 %   \centering
 %   \includegraphics[height=8.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collated2013262_2_band_1_D.png}
-%   \caption{$R_{rs}$ for the sites for the 09-19-2013 collection after applying the MoB-ELM atmospheric correction (Labels: LONGS: Long Pond south, CRANB: Cranberry Pond, ONTOS: Lake Ontario off-shore, and ONTNS: Lake Ontario near-shore).\label{fig:RrsROIs130919} } 
+%   \caption{$R_{rs}$ for the sites for the 09-19-2013 collection after applying the MoB-ELM atmospheric correction (Labels: LONGS: Long Pond south, CRANB: Cranberry Pond, ONTOS: Lake Ontario off-shore, and ONTNS: Lake Ontario near-shore). } 
 % \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -699,7 +699,7 @@ We calculated the normalized \acrfull{nrmse} for $R_{rs}(\lambda)$ to evaluate t
       \end{overpic}  
   \end{minipage}
   \vspace{0.7cm}
-  \caption{Comparison of $R_{rs}$ spectra from the different atmospheric correction algorithms and {\it in situ} data (dashed line) for the sites on the 09-19-2013 collection for (a) ONTNS: Lake Ontario Near Shore, (b) ONTOS: Lake Ontario Off Shore, (c) ONTEX: Lake Ontario Extra, (d) RVRPLM: River Plume and (e) RVRPIER: River Pier. Note: {\it In situ} data were not available in all stations. \label{fig:13262RrsCompField1}} 
+  \caption[Comparison of $R_{rs}$ spectra from the different atmospheric correction algorithms and {\it in situ} data for the sites on the 09-19-2013 collection.]{Comparison of $R_{rs}$ spectra from the different atmospheric correction algorithms and {\it in situ} data (dashed line) for the sites on the 09-19-2013 collection for (a) ONTNS: Lake Ontario Near Shore, (b) ONTOS: Lake Ontario Off Shore, (c) ONTEX: Lake Ontario Extra, (d) RVRPLM: River Plume and (e) RVRPIER: River Pier. Note: {\it In situ} data were not available in all stations. \label{fig:13262RrsCompField1}} 
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -745,12 +745,11 @@ We calculated the normalized \acrfull{nrmse} for $R_{rs}(\lambda)$ to evaluate t
   \end{minipage}    
 
     \vspace{0.7cm}
-  \caption{Comparison of $R_{rs}$ spectra from the different atmospheric correction algorithms and {\it in situ} data (dashed line) for the sites on the 09-19-2013 collection for (a) LONGN: Long Pond North, (b) LONGS: Long Pond South, (c) CRANB: Cranberry Pond, (d) BRADIN: Braddock Bay In and (e) BRADONT: Braddock Bay - Lake Ontario side. Note: {\it In situ} data were not available in all stations. \label{fig:13262RrsCompField2}} 
+  \caption[Comparison of $R_{rs}$ spectra from the different atmospheric correction algorithms and {\it in situ} data for the sites on the 09-19-2013 collection]{Comparison of $R_{rs}$ spectra from the different atmospheric correction algorithms and {\it in situ} data (dashed line) for the sites on the 09-19-2013 collection for (a) LONGN: Long Pond North, (b) LONGS: Long Pond South, (c) CRANB: Cranberry Pond, (d) BRADIN: Braddock Bay In and (e) BRADONT: Braddock Bay - Lake Ontario side. Note: {\it In situ} data were not available in all stations. \label{fig:13262RrsCompField2}} 
 \end{figure}
 
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-
 \begin{figure}[H]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
@@ -791,10 +790,10 @@ We calculated the normalized \acrfull{nrmse} for $R_{rs}(\lambda)$ to evaluate t
 % ------------ added from SPIE SD
 \subsection{Results from the Spectral-Matching and LUT Approach}
 \label{subsec:LUTapproach}
-The first chlorophyll-{\it a} retrieval algorithm used in this study was the algorithm developed by \cite{Concha2013IGARSS}. This algorithm uses a spectrum-matching and \gls{lut} methodology to extract CPA concentrations from $R_{rs}$ data. A LUT of $R_{rs}$ spectra is created in Hydrolight \cite{MobleyHE} with IOPs and CPA concentrations measured in the field as inputs. The parameters used to create this LUT are shown in \autoref{tab:LUTconc}. These parameters are chlorophyll-{\it a} ($C_a$), total suspended solid ($TSS$), CDOM absorption coefficient at $\lambda=440nm$ ($a_{CDOM}(440nm)$), and the backscatter fraction ($b_b/b$) for the scattering phase function selection.
+The developed retrieval algorithm \cite{Concha2013IGARSS} was applied to the 09-19-2013 scene (\autoref{fig:0910913Sites}). As described \S\ref{sec:retrieval}, this algorithm uses a spectrum-matching and \gls{lut} methodology to extract CPA concentrations from $R_{rs}$ data. A LUT of $R_{rs}$ spectra is created in Ecolight (\S\ref{sec:hydrolight}) with \gls{iops} and CPA concentrations measured in the field as inputs. The parameters used to create this LUT are shown in \autoref{tab:LUTconc}. These parameters are chlorophyll-{\it a} ($C_a$), total suspended solid ($TSS$), CDOM absorption coefficient at $\lambda=440nm$ ($a_{CDOM}(440nm)$), and the backscatter fraction ($b_b/b$) for the scattering phase function selection. The backscatter fraction was determined as described in \S\ref{subsec:mobelm}, page \pageref{pag:phasefn}.
 
 \begin{table}[htb]
-\caption{Input parameters for the LUT generation in Hydrolight for the Landsat 8 image acquired on 09-19-2013. These parameters are inherent optical properties (IOPs) for the lake (ONTNS) and the ponds (LONGS), chlorophyll-{\it a} ($C_a$), total suspended solid ($TSS$), CDOM absorption coefficient at $\lambda=440nm$ ($a_{CDOM}(440nm)$), and the backscatter fraction ($b_b/b$). \label{tab:LUTconc}} 
+\caption{Input parameters for the LUT generation in Ecolight for the Landsat 8 image acquired on 09-19-2013. These parameters are inherent optical properties (IOPs) for the lake (ONTNS) and the ponds (LONGS), chlorophyll-{\it a} ($C_a$), total suspended solid ($TSS$), CDOM absorption coefficient at $\lambda=440nm$ ($a_{CDOM}(440nm)$), and the backscatter fraction ($b_b/b$). \label{tab:LUTconc}} 
 \vspace{.07cm}
 \small
 \centering
@@ -824,60 +823,40 @@ The first chlorophyll-{\it a} retrieval algorithm used in this study was the alg
     \end{tabular}
   \end{table}
 
-Then, this algorithm finds the closest match in the least-squared sense for the $R_{rs}$ of water pixels with unknown CPA concentrations in the LUT of water pixels with known CPA concentrations. At this point, the closest element has discrete CPA concentration values corresponding to values used for the LUT generation (see \autoref{tab:LUTconc}). Finally, a non-linear interpolation is used to interpolate between the closest match's neighbors in order to obtain continuous values for the three CPAs simultaneously. In this study, this algorithm was applied to the $R_{rs}$'s results from the MoB-ELM method only.
+Then, the MoB-ELM algorithm finds the closest match in the least-squared sense for the $R_{rs}$ of water pixels with unknown CPA concentrations in the LUT of water pixels with known CPA concentrations. This first step is done in order to fix the IOP set (pond or lake) and the backscatter fraction. At this point, the closest element has discrete CPA concentration values corresponding to values used for the LUT generation (see \autoref{tab:LUTconc}). Finally, a non-linear interpolation is used to interpolate between the closest match's neighbors in order to obtain continuous values for the three CPAs simultaneously. In this study, this algorithm was applied to the $R_{rs}$'s results from the MoB-ELM method only, and not to the results from the Gordon and Wang's algorithms. 
 
-The results of the retrieval for the 09-19-2013 scene is illustrated in the left-hand side of \autoref{fig:CPAsMaps130919} as a concentration map for each CPA. These maps exhibit the expected trend of low concentrations in the lake and higher concentrations in the ponds. 
-
-% ------------
-% \subsection{Comparison with {\it in situ} data}
-The right-hand side of \autoref{fig:CPAsMaps130919} shows a comparison between measured concentration from the field and retrieved concentration obtained from the retrieval for each CPA for the different sites in the area of study. The dashed line represent the 1:1 line.\todo{separate figures}
-
+The results of the retrieval for the 09-19-2013 scene are illustrated in \autoref{fig:CPAsMaps130919} as a concentration map for each CPA. These maps exhibit the expected trend of low concentrations in the lake and higher concentrations in the ponds. Some bottom effect is perceived in the shoreline of Lake Ontario causing wrong high values, and these pixels are discarded. 
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 \begin{figure}[htbp!]
-  \begin{minipage}[c]{0.55\linewidth}
+%% Chl
+  \begin{minipage}[c]{1.0\linewidth}
       \centering
-      \includegraphics[trim=0 20 0 30,clip,height=6.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CHLmap130919_150420}  
+      \begin{overpic}[trim=0 20 0 30,clip,width=9.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CHLmap130919_150420} \put (105,60) {(a)}
+      \end{overpic}   
   \end{minipage}
-  \hfill
-  \begin{minipage}[d]{0.35\linewidth}
-      \includegraphics[trim=40 0 0 20,clip,height=5.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CHLretvsmea130919_150420}
-  \end{minipage}
-% 
+
 %% TSS
-  \begin{minipage}[c]{0.55\linewidth}
+  \begin{minipage}[d]{1.0\linewidth}
       \centering
-      \includegraphics[trim=0 30 0 10,clip,height=6.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/TSSmap130919_150420}  
-  \end{minipage}
-  \hfill
-  \begin{minipage}[d]{0.35\linewidth}
-      \includegraphics[trim=40 0 0 0,clip,height=5.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/TSSretvsmea130919_150420}
+      \begin{overpic}[trim=0 30 0 10,clip,width=9.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/TSSmap130919_150420} \put (105,60) {(b)}
+      \end{overpic}   
   \end{minipage}
 
 %% CDOM
-  \begin{minipage}[c]{0.55\linewidth}
+  \begin{minipage}[c]{1.0\linewidth}
       \centering
-      \includegraphics[trim=0 0 0 30,clip,height=6.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CDOMmap130919_150420}  
-  \end{minipage}
-  \hfill
-  \begin{minipage}[d]{0.35\linewidth}
-      \includegraphics[trim=40 0 0 0,clip,height=5.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CDOMretvsmea130919_150420}
+      \begin{overpic}[trim=0 0 0 30,clip,width=9.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CDOMmap130919_150420} \put (105,60) {(c)}
+      \end{overpic}   
   \end{minipage}
 % 
-  \caption{CPA retrieval results for the Landsat 8 image acquired on 09-19-2013 (scene LC80160302013262LGN00). Concentration maps (left) and measured vs retrieved plots (right). The dashed line represent the 1:1 line. (Labels: LongS: Long Pond south, Cranb: Cranberry Pond, OntOS: Lake Ontario off-shore, and OntNS: Lake Ontario near-shore). \label{fig:CPAsMaps130919} } 
-\end{figure}
-
-% Preliminary results for concentration maps for each CPA over the Rochester Embayment, Rochester, NY are shown in \autoref{fig:CPAsMaps}  The expected trend of having low concentration of CPAs in the offshore of Lake Ontario and higher concentrations in the nearby ponds (Long Pond and Cranberry Pond) can be seen. 
-
-% Comparisons between retrieved CPAs concentrations and field measurements are shown in \autoref{fig:CPAsMaps} for four different stations in the area of study. This comparison with field measurements showed good agreement at low concentrations but differences at higher concentrations. Ongoing work is focusing on incorporation of the IOP differences between water bodies in the LUT optimization process.
-% Landsat 8 images from this area of study and corresponding water samples collected at the time of the satellite's overpass will be used to test the retrieval algorithm. So far, there are only three satisfactory images available from the summer 2013. This project contemplates performing one new ground truth data collection during 2014. Therefore, images from the 2013-2014 spring and summer collection seasons will be used to test the methodology. Note that a difficult challenge of this research is to obtain images with relatively clear weather conditions (i.e. cloud free) over the area of study.
-
-% \autoref{fig:091913Sites} shows an image over this area of study for the data collection done on September, $19^{th}$, 2013  with the different sites as an example. The data collections are divided in two crews. One crew, named ``Lake crew'', is in charge of the Irondequoit Bay, Ontario near shore, Ontario off shore, Genesee River plume, Genesee River pier sites (labeled in \autoref{fig:091913Sites} as IBayN, OntNS, OntOS, RvrPLM and RvrPIER, respectively). The other crew, named ``Ponds crew'', is in charge of the Long Pond north and south, Cranberry Pond sites (labeled in \autoref{fig:091913Sites} as LongN, LongS and Cranb, respectively).
-%% CHL
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+  \caption[CPA retrieval results for the Landsat 8 image acquired on 09-19-2013]{CPA retrieval results for the Landsat 8 image acquired on 09-19-2013 (scene LC80160302013262LGN00) over the Rochester Embayment for (a) chlorophyll, (b) sediments and (c) CDOM.\label{fig:CPAsMaps130919}}
+\end{figure}\
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 \begin{figure}[htbp!]
   \begin{minipage}[c]{1.0\linewidth}
       \centering
-      \includegraphics[trim=0 0 0 30,clip,height=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CHLmap140929_150420}  
+      \begin{overpic}[trim=0 0 0 30,clip,height=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CHLmap140929_150420} \put (105,60) {(a)}
+      \end{overpic}   
   \end{minipage}\\
   % \hfill
   % \begin{minipage}[d]{0.45\linewidth}
@@ -887,7 +866,8 @@ The right-hand side of \autoref{fig:CPAsMaps130919} shows a comparison between m
 %% TSS
   \begin{minipage}[c]{1.0\linewidth}
       \centering
-      \includegraphics[trim=0 0 0 30,clip,height=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/TSSmap140929_150420}  
+      \begin{overpic}[trim=0 0 0 30,clip,height=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/TSSmap140929_150420} \put (105,60) {(b)}
+      \end{overpic}   
   \end{minipage}\\
   % \hfill
   % \begin{minipage}[d]{0.45\linewidth}
@@ -897,14 +877,15 @@ The right-hand side of \autoref{fig:CPAsMaps130919} shows a comparison between m
 %% CDOM
   \begin{minipage}[c]{1.0\linewidth}
       \centering
-      \includegraphics[trim=0 0 0 30,clip,height=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CDOMmap140929_150420}  
+      \begin{overpic}[trim=0 0 0 30,clip,height=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CDOMmap140929_150420} \put (105,60) {(c)}
+      \end{overpic}   
   \end{minipage}\\
   % \hfill
   % \begin{minipage}[d]{0.45\linewidth}
       % \includegraphics[height=5.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CDOMretvsmea140929_150420}
   % \end{minipage}
 
-  \caption{CPA concentration maps for Landsat 8 image acquired on 09-29-2014 (scene LC80170302014272LGN00).\label{fig:CPAsMaps140929} } 
+  \caption[CPA concentration maps for Landsat 8 image acquired on 09-29-2014]{CPA concentration maps for Landsat 8 image acquired on 09-29-2014 (scene LC80170302014272LGN00) over the Rochester Embayment for (a) chlorophyll, (b) sediments and (c) CDOM.\label{fig:CPAsMaps140929} } 
 \end{figure}
 
 % %%%%%%%%%%%%%%%%%%% SECTION %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -912,7 +893,67 @@ The right-hand side of \autoref{fig:CPAsMaps130919} shows a comparison between m
 
 % Note that the image to be analyzed needs to only include a bright target and not necessary a big urban area in order to determine the bright pixel from the Landsat surface reflectance product.\\
 
-A second image acquired on 09-29-2014 (scene LC80170302014272LGN00) (\autoref{fig:ROI_L8Images1415}.(a)) was analyzed in a similar fashion except that the reflectance of the bright pixel target was also predicted by Ecolight using data for the most eutrophic pond (Cranberry Pond). This approach is attractive when a wide range of water quality conditions are present and concentration measurements are available of bright and dark water targets. This approach may improve results where glint is present as it compensates for not only atmospheric effects but any other approximately linear phenomena that would modify the reflected energy leaving the water volume. Note that glint effects were not specifically compensated for in the atmospheric correction process and future efforts using the urban region bright target approach will need to compensate for glint when it is present. The concentration maps for this second scene are illustrated in \autoref{fig:CPAsMaps140929} again showing reasonable patterns in the lake and ponds. \autoref{fig:CPAsRetVSMea} shows the comparison between predicted and observed values for all sample sites on both days, along with a regression line fitted to the data and its respective goodness of fit values. The $R^2$ value of the regression for all CPAs are high. Note that dark targets on both days and the bright target on the 2014 date are forced to match by the MoB-ELM process. The results are very encouraging showing good quantitative agreement across a very wide range of concentrations. 
+The developed retrieval was also applied to the image acquired on 09-29-2014 (\autoref{fig:ROI_L8Images1415}.(a)). This image was analyzed in a similar fashion than the 09-19-2013 scene except that the reflectance of the bright pixel target used for the MoB-ELM algorithm was also predicted by Ecolight using data for the most eutrophic pond (Cranberry Pond), and not from a pixel in the Landsat Reflectance product. This approach is attractive when a wide range of water quality conditions are present and concentration measurements are available of bright and dark water targets. This approach may improve results where glint is present as it compensates for not only atmospheric effects but any other approximately linear phenomena that would modify the reflected energy leaving the water volume. Note that glint effects were not specifically compensated for in the atmospheric correction process and future efforts using the urban region bright target approach will need to compensate for glint when it is present. The concentration maps for this second scene are illustrated in \autoref{fig:CPAsMaps140929} again showing reasonable patterns in the lake and ponds. 
+
+
+% ------------
+% \subsection{Comparison with {\it in situ} data}
+% Comparisons between retrieved CPAs concentrations and field measurements are shown in \autoref{fig:CPAsMaps} for four different stations in the area of study. This comparison with field measurements showed good agreement at low concentrations but differences at higher concentrations. Ongoing work is focusing on incorporation of the IOP differences between water bodies in the LUT optimization process.
+
+\autoref{fig:RetvsMea130919} shows a comparison between measured concentration from the field and retrieved concentration obtained from the retrieval for each CPA for the different sites in the area of study. The dashed line represent the 1:1 line. \autoref{fig:CPAsRetVSMea} shows the comparison between predicted and observed values for all sample sites on both days, along with a regression line fitted to the data and its respective goodness of fit values. The $R^2$ value of the regression for all CPAs are high. Note that dark targets on both days and the bright target on the 2014 date are forced to match by the MoB-ELM process. The results are very encouraging showing good quantitative agreement across a very wide range of concentrations. 
+
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htbp!]
+  \begin{minipage}[c]{0.48\linewidth}
+  \centering
+      \begin{overpic}[grid,trim=40 0 0 20,clip,width=7.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CHLretvsmea130919_150420}
+  \put (105,60) {(a)}
+      \end{overpic}   
+  \end{minipage}
+  \hfill
+  \begin{minipage}[d]{0.48\linewidth}
+  \centering
+      \begin{overpic}[trim=40 0 0 0,clip,width=7.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/TSSretvsmea130919_150420}
+  \put (105,60) {(b)}
+      \end{overpic}   
+  \end{minipage}
+
+  \begin{minipage}[c]{1.0\linewidth}
+  \centering
+      \begin{overpic}[trim=40 0 0 0,clip,width=7.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CDOMretvsmea130919_150420}
+  \put (105,60) {(c)}
+      \end{overpic}   
+  \end{minipage}
+% 
+  \caption[Measured vs retrieved plots for the Landsat 8 image acquired on 09-19-2013.]{Measured vs retrieved plots for the Landsat 8 image acquired on 09-19-2013 (scene LC80160302013262LGN00). The dashed line represent the 1:1 line. (Labels: LongS: Long Pond south, Cranb: Cranberry Pond, OntOS: Lake Ontario off-shore, and OntNS: Lake Ontario near-shore). \label{fig:RetvsMea130919} } 
+\end{figure}
+
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+\begin{figure}[htb]
+  \begin{minipage}[c]{0.48\linewidth}
+  \centering
+  % CHL
+      \begin{overpic}[trim=40 0 80 0,clip,width=6cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CHLretvsmea150423}  
+  \put (105,60) {(a)}
+      \end{overpic}   
+  \end{minipage}
+  % TSS
+  \begin{minipage}[d]{0.48\linewidth}
+  \centering
+      \begin{overpic}[trim=40 0 80 0,clip,width=6cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/TSSretvsmea150423}
+  \put (105,60) {(b)}
+      \end{overpic}   
+  \end{minipage}
+  % CDOM
+  \begin{minipage}[c]{1.0\linewidth}
+  \centering
+      \begin{overpic}[trim=40 0 80 0,clip,width=6cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CDOMretvsmea150423}  
+  \put (105,60) {(c)}
+      \end{overpic}   
+  \end{minipage}
+
+  \caption[Landsat 8's retrieved vs measured CPA concentration for the 09-19-2014 and 09-29-2015 scenes]{Landsat 8's retrieved vs measured CPA concentration for the 09-19-2014 and 09-29-2015 scenes with regression line (solid red line) and goodness of fit values. The dashed line represents the 1:1 line. \label{fig:CPAsRetVSMea} } 
+\end{figure}
 
 The numerical results are summarized in \autoref{fig:RMSE} where the root mean squared error (RMSE) in predicted concentration is normalized by the range in concentrations to estimate overall performance, i.e. the normalized RMSE (NRMSE), defined as
 
@@ -923,30 +964,14 @@ The numerical results are summarized in \autoref{fig:RMSE} where the root mean s
 
 \noindent where $C_{ret}$ is the retrieved CPA concentration (i.e. $C_a$, $TSS$ or $a_{CDOM}(440nm)$), $C_{mea}$ is the measured CPA concentration, and $n=1,...,N$ is the $n$th site from a total of $N$ sites for both days. The RMSE percentage of range values are approximately $10\%$ for $C_a$ and $TSS$, and about $5\%$ for $a_{CDOM}(440nm)$. These errors are consistent with the expected errors reported by \cite{Gerace:2013}. 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{figure}[htb]
-  \begin{minipage}[c]{0.32\linewidth}
-  % CHL
-      \includegraphics[trim=40 0 80 0,clip,height=5.1cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CHLretvsmea150423}  
-  \end{minipage}
-  % TSS
-  \begin{minipage}[d]{0.32\linewidth}
-      \includegraphics[trim=40 0 80 0,clip,height=5.1cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/TSSretvsmea150423}
-  \end{minipage}
-  % CDOM
-  \begin{minipage}[c]{0.32\linewidth}
-      \includegraphics[trim=40 0 80 0,clip,height=5.1cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CDOMretvsmea150423}  
-  \end{minipage}
 
-  \caption{Landsat 8's retrieved vs measured CPA concentration for the 09-19-2014 and 09-29-2015 scenes with regression line (solid red line) and goodness of fit values. The dashed line represents the 1:1 line. \label{fig:CPAsRetVSMea} } 
-\end{figure}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 \begin{figure}[htb]
   \centering
-      \includegraphics[height=5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/RMSE_ret150421}
+      \includegraphics[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/RMSE_ret150421}
       % \vspace{-.4cm}
-      \caption{RMSE expressed as percentage of range for each CPA. \label{fig:RMSE}}
+      \caption{NRMSE expressed as percentage of range for each CPA. \label{fig:RMSE}}
       % \vspace{-.4cm}
 \end{figure}
 
@@ -1017,14 +1042,14 @@ The next step was to apply the algorithms described in Section~\ref{sec:retrieva
 \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 0 40 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_chlor_MOB_D_R_R}
+      \begin{overpic}[trim=0 0 40 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_chlor_MOB_D_R_R}
       \put (5,5) {A) MOB-ELM}
       \end{overpic}
     \end{minipage}
     \hfill
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 0 40 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/LC80160302013262LGN00_L2_SWIR_FranzAve_chlor_a_ACO_OC3def}
+      \begin{overpic}[trim=0 0 40 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/LC80160302013262LGN00_L2_SWIR_FranzAve_chlor_a_ACO_OC3def}
       \put (5,5) {B) Acolite-SWIR}
       \end{overpic}
     \end{minipage}
@@ -1033,14 +1058,14 @@ The next step was to apply the algorithms described in Section~\ref{sec:retrieva
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 0 40 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_chlor_a_SEA5x5_R}
+      \begin{overpic}[trim=0 0 40 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_chlor_a_SEA5x5_R}
       \put (5,5) {C) SeaDAS-SWIR}
       \end{overpic}
     \end{minipage}
     \hfill
   \begin{minipage}[c]{0.48\linewidth}
       \centering
-      \begin{overpic}[trim=0 0 40 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_chlor_a_MUMM45}
+      \begin{overpic}[trim=0 0 40 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_chlor_a_MUMM45}
       \put (5,5) {D) SeaDAS-MUMM}
       \end{overpic}
     \end{minipage}
