--- a/Summary.tex
+++ b/Summary.tex
@@ -52,5 +52,5 @@ The next step will be to use the validated results from the retrieval process fo
 
 \subsection{Investigate New Sensor Enhancements for Future Missions}
 Water pixel spectra from a hyperspectral image (e.g. Hyperspectral Imager for the Coastal Ocean (HICO),  Airborne Visible/InfraRed Imaging Spectrometer (AVIRIS)) will be modified to simulate data similar to Landsat 8 but with the addition of a new NIR band. The retrieval process will be performed with these simulated data with and without the new NIR band in order to evaluate performance improvement. A similar analysis will be done to evaluate narrower spectral bandwidths available in Landsat 8 compared to those found in the MEdium Resolution Imaging Spectrometer (MERIS) and MODIS, for instance. 
-
-\section{Concluding Remarks}
+% -------------------------------------
+% \section{Concluding Remarks}
