--- a/thesisfrontmatter.sty
+++ b/thesisfrontmatter.sty
@@ -181,7 +181,7 @@
 % ***********************************************
 \newcommand*{\makedeclaration}{
     \thispagestyle{empty}
-    \setcounter{page}{1}
+    %\setcounter{page}{1}
     \setlength{\topskip}{2cm}
     \begin{center}
         \renewcommand{\baselinestretch}{1.0}
